src/objects/Character__c.object
<CustomObject>
    <fields>
        <fullName>Character_Image__c</fullName>
        <description>Displays an image of the character</description>
        <label>Character_Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Fighter_Number__c</fullName>
        <label>Fighter Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Smash_Appearance__c</fullName>
        <label>First Smash Appearance</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotablePlayers__c</fullName>
        <description>Notable Players that play this character.</description>
        <label>NotablePlayers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <inlineHelpText>Displays what series the character is from</inlineHelpText>
        <label>Series</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speed_Value__c</fullName>
        <label>Speed Value</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Speed__c</fullName>
        <label>Speed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Slow</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Fast</fullName>
                </value>
                <value>
                    <fullName>Very Fast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Style_Description__c</fullName>
        <description>Description of the fighting style of the character</description>
        <label>Style Description</label>
        <length>350</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Style__c</fullName>
        <label>Style</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Versatile</fullName>
                </value>
                <value>
                    <fullName>Zoner</fullName>
                </value>
                <value>
                    <fullName>Rush Down</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Times_Played__c</fullName>
        <label>Times Played</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight_Value__c</fullName>
        <label>Weight Value</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <description>Allows users to filter through different weight classes</description>
        <label>Weight</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Featherweight</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>MiddleWeight</fullName>
                </value>
                <value>
                    <fullName>Heavyweight</fullName>
                </value>
                <value>
                    <fullName>Super Heavyweight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Character</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Times_Played__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Character Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Characters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>